tests/data/parseerror/invalid-constant-1.php
<?php

const $CONST = 1;
